# backend_api

./: .env  docker-compose-local.yaml  main.py  pyproject.toml
app/: main.py
app/api_v1/handlers/: __init__.py  user.py
app/core/: config.py
app/db/: session.py
app/db/models/: user.py
migrations/: env.py
migrations/versions/: a440738810e1_create_table_user.py
